# kurisu

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.monitoring.yml  docker-compose.yml  kurisu.code-workspace  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-quality-checks.yml  codacy.yml  codeql-analysis.yml  gitleaks.yml  pysa.yml  release.yml  sem-release.yml
backend/: CHANGELOG.md  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/plugins/: __init__.py
backend/plugins/analytics/chats/: __init__.py  models.py  service.py
backend/plugins/analytics/stats/: __init__.py  endpoint.py  models.py  service.py
backend/plugins/core/chat_config/: __init__.py  endpoint.py  models.py  repository.py  service.py
backend/plugins/core/config/: __init__.py  endpoint.py  repository.py  service.py
backend/plugins/core/gdpr/: endpoint.py  models.py  repository.py  service.py
backend/plugins/fun/altgirls/: endpoint.py  models.py  repository.py  service.py
backend/plugins/fun/dick/: constants.py  endpoint.py  models.py  service.py
backend/plugins/fun/magik/: __init__.py  endpoint.py  service.py
backend/plugins/fun/nhentai/: endpoint.py  service.py
backend/plugins/fun/random/: __init__.py  endpoint.py  models.py  service.py
backend/plugins/neuro/fanfic/: endpoint.py  models.py  prompts.py  repository.py  service.py
backend/plugins/neuro/ideogram/: fal_models.py  repository.py  service.py
backend/plugins/neuro/summary/: repository.py
backend/plugins/neuro/threads/: __init__.py  endpoint.py  image_generator.py  models.py  prompts.py  repository.py  service.py
backend/plugins/neuro/threads/assets/: dvach_template.html  fourchan_template.html
backend/plugins/neuro/threads/templates/: dvach_template.html
backend/plugins/utilities/debug/: endpoint.py  models.py
backend/plugins/utilities/instagram/: __init__.py  endpoint.py  models.py  service.py
backend/plugins/utilities/transcribe/: endpoint.py  service.py
backend/utils/: asset_service.py  database_setup.py  dependencies.py  exceptions.py  fal_client.py  fal_models.py  llm_client.py  middleware.py  redis_client.py
bot/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
bot/jobs/: active_chats.py  manager.py  summary_job.py
bot/plugins/: admin.py  altgirls.py  config.py  debug.py  dick.py  fanfic.py  gdpr.py  help.py  ideogram.py  instagram.py  messages.py  random.py  threads.py  transcribe.py
bot/utils/: api_client.py  chat_config.py  config_client.py  decorators.py  exceptions.py  help_registry.py  media_helpers.py  message_utils.py
config/otel-collector/: config.yml
config/prometheus/: prometheus.yml
config/promtail/: config.yml
dashboard/: Dockerfile  api_client.py  config.py  main.py  pyproject.toml
dashboard/static/: app.js  style.css
docs/: contributing.md
kurisu_core/: pyproject.toml
kurisu_core/src/kurisu_core/: __init__.py  logging_config.py  tracing.py
monitoring/loki/: config.yml
monitoring/otel-collector/: config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: config.yml
monitoring/tempo/: config.yml
scripts/: delete_comments.py  flatten_env.py  format_project.ps1  remove_comments.py
sentiment_worker/: Dockerfile  Dockerfile.base  config.py  main.py  pyproject.toml
sentiment_worker/ml/: interface.py  sentiment.py
services/backend/: Dockerfile  config.py  main.py  pyproject.toml  uvicorn_log_config.json
services/backend/plugins/: __init__.py
services/backend/plugins/analytics/chats/: endpoint.py  repository.py
services/backend/plugins/analytics/stats/: repository.py
services/backend/plugins/core/: __init__.py
services/backend/plugins/core/chat_config/: models.py  plugin.py  repository.py  service.py
services/backend/plugins/core/config/: endpoint.py  models.py  service.py
services/backend/plugins/core/gdpr/: __init__.py  models.py  service.py
services/backend/plugins/core/messages/: __init__.py  endpoint.py  models.py  repository.py  service.py
services/backend/plugins/fun/altgirls/: __init__.py  endpoint.py
services/backend/plugins/fun/dick/: service.py
services/backend/plugins/fun/magik/: endpoint.py
services/backend/plugins/fun/nhentai/: __init__.py  client.py  models.py  service.py
services/backend/plugins/fun/random/: __init__.py  endpoint.py  service.py
services/backend/plugins/neuro/fanfic/: endpoint.py  models.py
services/backend/plugins/neuro/ideogram/: __init__.py  endpoint.py  fal_models.py  models.py  repository.py  service.py
services/backend/plugins/neuro/summary/: __init__.py  default_system_prompt.txt  endpoint.py  models.py  repository.py  service.py
services/backend/plugins/neuro/threads/: endpoint.py  image_generator.py
services/backend/plugins/utilities/debug/: __init__.py
services/backend/plugins/utilities/instagram/: config.py  endpoint.py  service.py
services/backend/plugins/utilities/transcribe/: __init__.py  endpoint.py  models.py  service.py
services/backend/utils/: asset_service.py  database_setup.py  dependencies.py  exceptions.py  fal_client.py  llm_client.py  middleware.py  redis_client.py
services/bot/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
services/bot/jobs/: active_chats.py  manager.py
services/bot/plugins/: admin.py  altgirls.py  config.py  dick.py  fanfic.py  gdpr.py  help.py  ideogram.py  instagram.py  magik.py  messages.py  nhentai.py  random.py  threads.py  transcribe.py
services/bot/plugins/handlers/: status_updates.py
services/bot/utils/: api_client.py  chat_config.py  chat_info_helper.py  config_client.py  decorators.py  media_helpers.py  message_utils.py  redis_utils.py
services/dashboard/: Dockerfile  api_client.py  config.py  main.py  pyproject.toml
services/sentiment_worker/: Dockerfile  config.py  main.py  pyproject.toml
services/sentiment_worker/ml/: coordinator.py  sentiment.py  topics.py
worker/: CHANGELOG.md  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
worker/utils/: repository.py
(+13 files in other folders)
