# backend/pyproject.toml (Corrected Version)

[tool.poetry]
name = "kurisu-backend"
version = "0.1.0"
description = "The backend service for the Kurisu project."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
matplotlib = "^3.10.6"
pillow = "^11.3.0"
opencv-python-headless = "^4.12.0"
wand = "^0.6.13"
python-magic = "^0.4.27"
pyfiglet = "^1.0.4"
motor = "^3.7.1"
pymongo = "^4.14.1"
redis = "^6.4.0"
celery = "^5.5.3"
structlog = "^25.4.0"
httpx = { extras = ["socks"], version = "^0.28.1" }
openai = "^1.102.0"
fal-client = "^0.7.0"
imgkit = "^1.2.3"
jinja2 = "^3.1.6"
pytz = "^2025.2"
kurisu-core = { path = "../kurisu_core", develop = true }


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-dotenv = "^0.5.2"
ruff = "^0.12.11"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"