[tool.poetry]
name = "kurisu-bot"
version = "1.0.0"
description = "Telegram bot interface for the Kurisu project."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyrofork = "^2.0.207"
tgcrypto = "^1.2.5"
structlog = "^25.4.0"
httpx = {extras = ["socks"], version = "^0.28.1"}
redis = "^6.4.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# This adds the crucial local library dependency
kurisu-core = {path = "../kurisu_core", develop = true}
opentelemetry-api = "^1.36.0"
opentelemetry-sdk = "^1.36.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.36.0"
opentelemetry-instrumentation-httpx = "^0.57b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
mypy = "^1.17.1" 

# ====================================
# Python Semantic Release Configuration
# ====================================
[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["__init__.py:__version__"]
build_command = ""  # No build needed for applications
dist_path = "dist/"
upload_to_pypi = false
upload_to_repository = false
remove_dist = false
commit_message = "chore(bot): release v{version}"
tag_format = "bot-v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^chore\\(deps\\):",
    "^build\\(deps\\):",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore", 
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump = false
# Support for emoji-prefixed commits
pattern = "^.*?(?P<type>feat|fix|docs|style|refactor|perf|test|build|ci|chore)(?:\\((?P<scope>[^)]+)\\))?(?P<breaking>!)?:\\s*(?P<subject>.*)$"
[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "github-actions <actions@users.noreply.github.com>"

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"