[tool.poetry]
name = "dashboard"
version = "0.1.0"
package-mode = false
description = "Web admin for Kurisu bot configuration"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"
structlog = "^25.4.0"
kurisu-core = {path = "../kurisu_core", develop = true}
opentelemetry-api = "^1.36.0"
opentelemetry-sdk = "^1.36.0"
opentelemetry-instrumentation-fastapi = "^0.57b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.36.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"