[tool.poetry]
name = "kurisu-core"
version = "0.1.0"
description = "Shared core library for the Kurisu project (e.g., logging)."
authors = ["salieri_dev <you@example.com>"]
packages = [{include = "kurisu_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^25.4.0" # Use a specific version range

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here in the future