# worker/pyproject.toml (Corrected Version)

[tool.poetry]
name = "kurisu-worker"
version = "0.1.0"
description = "Background task worker for the Kurisu project."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
redis = "^6.4.0"
httpx = "^0.28.1"
structlog = "^25.4.0"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
pymongo = "^4.6.1"

# Add the crucial local library dependency
kurisu-core = {path = "../kurisu_core", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
mypy = "^1.17.1" 