[tool.poetry]
name = "kurisu-bot"
version = "1.0.0"
description = "Telegram bot interface for the Kurisu project."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyrofork = "^2.0.207"
tgcrypto = "^1.2.5"
structlog = "^25.4.0"
httpx = {extras = ["socks"], version = "^0.28.1"}
redis = "^6.4.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
kurisu-core = { path = "../../packages/kurisu_core", develop = true }
opentelemetry-api = "^1.36.0"
opentelemetry-sdk = "^1.36.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.36.0"
opentelemetry-instrumentation-httpx = "^0.57b0"
apscheduler = "^3.11.0"
pytz = "^2025.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"